# emgucv

./: .gitignore  .gitmodules  AGENTS.md  BinaryBuild.bat  Build_Binary_x86-64.bat  Build_Binary_x86-64_intel_icl.bat  Build_Binary_x86-64_netfx_core.bat  Build_Binary_x86.bat  Build_Binary_x86_intel_icl.bat  CLAUDE.md  CMakeLists.txt  DocumentBuild.bat  Emgu.CV.Example_VS2008.sln  Emgu.CV.Test_VS2005.sln  Emgu.CV.Test_VS2008.sln  Emgu.CV.shfbproj  Emgu.CV.snk  Emgu.CV_VS2005.sln  Emgu.CV_VS2008.sln  Emgu.RPC_VS2005.sln  Emgu.RPC_VS2008.sln  Example.sln  LICENSE  README.md  README.txt  ReleaseBuild.bat  SourceBuild.bat  build_deb  components.config  cvRedirectError.patch  cxcore.h.diff  cxsystem.cpp.diff  makefile  nuget.config  oldMakeFile  opencv.patch
DebuggerVisualizer/: AboutCommand.cs  CMakeLists.txt  Command1.cs  DebuggerVisualizer.csproj  Directory.Build.props.in  ExtensionEntrypoint.cs  ImageDebuggerVisualizerProvider.cs  ImageViewModel.cs  ImageVisualizerDialog.cs  ImageVisualizerDialog.xaml
Emgu.CV.Bitmap/: BitmapExtension.cs  CMakeLists.txt  Directory.Build.props.in  Emgu.CV.Bitmap.csproj  README.md.in
Emgu.CV.Contrib/: CMakeLists.txt  CudaSoftCascadeDetector.cs  Emgu.CV.Contrib.Android.csproj  Emgu.CV.Contrib.Windows.Phone.csproj  Emgu.CV.Contrib.Windows.Store.csproj  Emgu.CV.Contrib.csproj  Emgu.CV.Contrib.iOS.csproj  Emgu.CV.Contrib.projitems  Emgu.CV.Contrib.shproj  SoftCascadeDetector.cs
Emgu.CV.Cuda/: CMakeLists.txt  CudaCascadeClassifier.cs  CudaClahe.cs  CudaConvolution.cs  CudaDeviceInfo.cs  CudaHOGDescriptor.cs  CudaImage.cs  CudaImageAndroid.cs  CudaInvoke.cs  CudaLookUpTable.cs  Emgu.CV.Cuda.Android.csproj  Emgu.CV.Cuda.MonoTouch.csproj  Emgu.CV.Cuda.Windows.Store.csproj  Emgu.CV.Cuda.csproj  Emgu.CV.Cuda.iOS.csproj  Emgu.CV.Cuda.projitems  Emgu.CV.Cuda.shproj  GpuMat.cs  InputArray.cs  Stream.cs  TargetArchs.cs
Emgu.CV.DebuggerVisualizers/: BitmapVisualizer.cs  CMakeLists.txt  DenseHistogramVisualizer.cs  Emgu.CV.DebuggerVisualizers.csproj  ImageVisualizer.cs  MatNDVisualizer.cs  MatrixVisualizer.cs
Emgu.CV.Example/: CMakeLists.txt
Emgu.CV.Extern/: CMakeLists.txt  CascadeClassifier.cpp  Emgu.CV.Extern.vcproj  Emgu.CV.Extern2005.vcproj  HOGDescriptor.cpp  OpencvCMakeLists.patch  RTreeClassifier.cpp  VectorOfByte.cpp  bgfgDetectors.cpp  bioinspired_c.cpp  blob.cpp  blob.h  blob_export.h  calib3d_c.cpp  calib3d_c.h  compile  contrib_c.cpp  contrib_c.h  core_c.cpp  core_c_extra.h  cvANN_MLP.cpp  cvBlob.cpp  cvBoost.cpp  cvDTree.cpp  cvEM.cpp  cvKNearest.cpp  cvNormalBayesClassifier.cpp  cvRTrees.cpp  cvSVM.cpp  cvStatModel.cpp  cvapi_compat.h  cvblob_c.cpp  cvblob_c.h  cvextern.h  dataLogger.cpp  dataLogger.h  datum.cpp  datum.h  doubleOps.h  emgu_c.cpp  (+67 more)
Emgu.CV.ML/: ANN_MLP.cs  Boost.cs  CMakeLists.txt  DTree.cs  DTrees.cs  EM.cs  EMLegacy.cs  EMParams.cs  ERTrees.cs  Emgu.CV.ML.Android.csproj  Emgu.CV.ML.MonoTouch.csproj  Emgu.CV.ML.Windows.Phone.csproj  Emgu.CV.ML.Windows.Store.csproj  Emgu.CV.ML.csproj  Emgu.CV.ML.dll.config  Emgu.CV.ML.iOS.csproj  Emgu.CV.ML.projitems  Emgu.CV.ML.shproj  GBTrees.cs  KNearest.cs  LogisticRegression.cs  ML.snk  NeuralNetwork.cs  NormalBayesClassifier.cs  RTrees.cs  SVM.cs  SVMParams.cs  StatModel.cs  TrainData.cs
Emgu.CV.Models/: CMakeLists.txt  CascadeFaceAndEyeDetector.cs  CharucoCameraCalibrationModel.cs  CombinedModel.cs  DetectedObject.cs  Emgu.CV.Models.Shared.projitems  Emgu.CV.Models.Shared.shproj  Emgu.CV.Models.csproj  FacemarkDetector.cs  FreetypeNotoSansCJK.cs  Gpt2Tokenizer.cs  IProcessAndRenderModel.cs  PedestrianDetector.cs  TesseractModel.cs  VehicleLicensePlateDetector.cs  Yolo.cs
Emgu.CV.NativeImage/: BitmapExtension.cs  BitmapSourceExtension.cs  CGImageExtension.cs  CIImageExtension.cs  CMakeLists.txt  NSImageExtension.cs  UIImageExtension.cs  WinrtInvoke.cs  WriteableBitmapExtension.UWP.cs  WriteableBitmapExtension.WinUI.cs  WriteableBitmapExtension.cs
Emgu.CV.Nonfree/: CMakeLists.txt  CudaSURFDetector.cs  Emgu.CV.Nonfree.Android.csproj  Emgu.CV.Nonfree.Windows.Store.csproj  Emgu.CV.Nonfree.csproj  Emgu.CV.Nonfree.iOS.csproj  OclSURFDetector.cs  SIFTDetector.cs  SURFDetector.cs  SURFFeature.cs
Emgu.CV.OCR/: CMakeLists.txt  Emgu.CV.OCR.Android.csproj  Emgu.CV.OCR.MonoTouch.csproj  Emgu.CV.OCR.csproj  Emgu.CV.OCR.iOS.csproj  Emgu.CV.OCR.projitems  Emgu.CV.OCR.shproj  ITessResultRenderer.cs  LocaleGuard.cs  OcrEngineMode.cs  OcrInvoke.cs  PageIterator.cs  PageSegMode.cs  Pix.cs  TessResultRenderer.cs  Tesseract.cs  TesseractResult.cs
Emgu.CV.Platform/: CMakeLists.txt
Emgu.CV.Runtime/: CMakeLists.txt
Emgu.CV.Stitching/: CMakeLists.txt  Emgu.CV.Stitching.Android.csproj  Emgu.CV.Stitching.MonoTouch.csproj  Emgu.CV.Stitching.Windows.Phone.csproj  Emgu.CV.Stitching.Windows.Store.csproj  Emgu.CV.Stitching.csproj  Emgu.CV.Stitching.iOS.csproj  Emgu.CV.Stitching.projitems  Emgu.CV.Stitching.shproj  FeaturesFinder.cs  Stitcher.cs  WarperCreator.cs
Emgu.CV.Superres/: CMakeLists.txt  Emgu.CV.Superres.csproj  Emgu.CV.Superres.projitems  Emgu.CV.Superres.shproj  FrameSource.cs  SuperResolution.cs
Emgu.CV.UI/: CMakeLists.txt  CV.UI.snk  Emgu.CV.UI.csproj  Emgu.CV.UI.projitems  Emgu.CV.UI.shproj  HistogramBox.cs  HistogramBox.designer.cs  HistogramCtrl.Designer.cs  HistogramCtrl.cs  HistogramViewer.Designer.cs  HistogramViewer.cs  HistogramViewer.resx  HistogramViewer.zh-CN.resx  ImageBox.Designer.cs  ImageBox.cs  ImageBox.resx  ImageProperty.Designer.cs  ImageProperty.cs  ImageProperty.resx  ImageProperty.zh-CN.resx  ImagePropertyDialog.cs  ImagePropertyDialog.designer.cs  ImagePropertyDialog.zh-CN.resx  ImageViewer.Designer.cs  ImageViewer.cs  ImageViewer.zh-CN.resx  MatrixBox.Designer.cs  MatrixBox.cs  MatrixBox.zh-CN.resx  MatrixViewer.Designer.cs  MatrixViewer.cs  MatrixViewer.resx  MatrixViewer.zh-CN.resx  Operation.cs  OperationStackView.Designer.cs  (+17 more)
Emgu.CV.UI.GL/: CMakeLists.txt  Emgu.CV.UI.GL.csproj  Emgu.CV.UI.GL.projitems  Emgu.CV.UI.GL.shproj  GLImageView.cs  GLImageViewer.Designer.cs  GLImageViewer.cs  GeometricChange.cs  ImageBufferFactory.cs  OpenTK.GLControl.xml  Report.cs
(+3534 files in other folders)
